Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -20,22 +20,26 @@
 
     <section class="main-content">
       <h1>
-<a id="welcome-to-project-signify" class="anchor" href="#welcome-to-project-signify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Project Signify</h1>
+<a id="welcome-to-project-signify" class="anchor" href="#welcome-to-project-signify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Welcome to Project Signify</strong>
+</h1>
 
 <p>Project Signify is a Computer Vision based Sign Language Recognition Device that relies on the Microsoft Kinect to identify Indian Sign Language Gestures. Our work classifies 3 gestures using Kinect for Windows (Global Feature Extraction) with the onboard RGB and Depth sensor cameras.</p>
 
 <h1>
-<a id="what-is-the-significance-of-signify" class="anchor" href="#what-is-the-significance-of-signify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>What is the significance of Signify?</h1>
+<a id="what-is-the-significance-of-signify" class="anchor" href="#what-is-the-significance-of-signify" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>What is the significance of Signify?</strong>
+</h1>
 
 <p>This system could find widespread use in schools where the hearing impaired generally require an interpreter for translation. It can find use in gatherings where the audience belongs to the hearing impaired community and needs to effectively communicate without third party intervention. It can be reverse engineered to learn sign language based on the training gestures provided. </p>
 
 <h1>
-<a id="project-phase" class="anchor" href="#project-phase" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Project Phase:</h1>
+<a id="project-phase" class="anchor" href="#project-phase" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>Project Phase:</strong>
+</h1>
 
 <p>Classification of 3 gestures with <strong>93.33% test accuracy</strong> using both large margin classifiers and Neural Networks.</p>
 
 <h1>
-<a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>The Development Team</h1>
+<a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>The Development Team</strong>
+</h1>
 
 <p><a href="https://github.com/surajpaib" class="user-mention">@surajpaib</a> , LinkedIn Profile: </p>
 
