--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       <a href="https://github.com/surajpaib/8th-Sem" class="btn">View on GitHub</a>
       <a href="https://github.com/surajpaib/8th-Sem/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/surajpaib/8th-Sem/tarball/master" class="btn">Download .tar.gz</a>
+      <a href="https://drive.google.com/file/d/0BxcO5v3Bi80QeHFKdXE5cWY3ZUk/view?usp=sharing" class="btn">Download White Paper</a>
     </section>
 
     <section class="main-content">
@@ -41,7 +42,7 @@
 
 <p>Classification of 3 gestures with <strong>93.33% test accuracy</strong> using both large margin classifiers and Neural Networks.</p>
 
-<p>(<a href="https://drive.google.com/file/d/0BxcO5v3Bi80QeHFKdXE5cWY3ZUk/view?usp=sharing">&gt; <strong>Click here for the White Paper</strong></a>)</p>
+
 
 <hr>
 
