--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Signify</h1>
       <h2 class="project-tagline">Sign Language Recognition using Neural Networks</h2>
+       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn">Wiki on GitHub</a>
       <a href="https://github.com/surajpaib/8th-Sem" class="btn">View on GitHub</a>
       <a href="https://github.com/surajpaib/8th-Sem/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/surajpaib/8th-Sem/tarball/master" class="btn">Download .tar.gz</a>
