--- a/index.html
+++ b/index.html
@@ -13,10 +13,14 @@
     <section class="page-header">
       <h1 class="project-name">Signify</h1>
       <h2 class="project-tagline">Sign Language Recognition using Neural Networks</h2>
-       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn">Wiki on GitHub</a>
-      <a href="https://github.com/surajpaib/8th-Sem" class="btn">View on GitHub</a>
-      <a href="https://github.com/surajpaib/8th-Sem/zipball/master" class="btn">Download .zip</a>
-      <a href="https://github.com/surajpaib/8th-Sem/tarball/master" class="btn">Download .tar.gz</a>
+       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn"><em>HOME</em>/Wiki on GitHub</a>
+       <a href="https://github.com/surajpaib/8th-Sem/wiki/Demo" class="btn">Demo</a>
+       <a href="https://github.com/surajpaib/8th-Sem/wiki/Requisites" class="btn">Requisites</a>
+      <a href="https://github.com/surajpaib/8th-Sem/wiki/Results-and-Accuracies" class="btn">Results</a>
+      <a href="https://github.com/surajpaib/8th-Sem/wiki/Future-Work" class="btn">Future Work</a>
+      <br><br>
+      <a href="https://github.com/surajpaib/8th-Sem" class="btn">View on Github</a>
+      
       <a href="https://drive.google.com/file/d/0BxcO5v3Bi80QeHFKdXE5cWY3ZUk/view?usp=sharing" class="btn">Download White Paper</a>
     </section>
 
