--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Signify</h1>
       <h2 class="project-tagline">Sign Language Recognition using Neural Networks</h2>
-       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn"><em>HOME</em>/Wiki on GitHub</a>
+       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn"><b>HOME</b> /Wiki on GitHub</a>
        <a href="https://github.com/surajpaib/8th-Sem/wiki/Demo" class="btn">Demo</a>
        <a href="https://github.com/surajpaib/8th-Sem/wiki/Requisites" class="btn">Requisites</a>
       <a href="https://github.com/surajpaib/8th-Sem/wiki/Results-and-Accuracies" class="btn">Results</a>
