--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <section class="page-header">
       <h1 class="project-name">Signify</h1>
       <h2 class="project-tagline">Sign Language Recognition using Neural Networks</h2>
-       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn"><b>HOME</b> /Wiki on GitHub</a>
+       <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn">HOME /Wiki on GitHub</a>
        <a href="https://github.com/surajpaib/8th-Sem/wiki/Demo" class="btn">Demo</a>
        <a href="https://github.com/surajpaib/8th-Sem/wiki/Requisites" class="btn">Requisites</a>
       <a href="https://github.com/surajpaib/8th-Sem/wiki/Results-and-Accuracies" class="btn">Results</a>
@@ -58,7 +58,7 @@
 <p>A single portable unit that runs on the Raspberry Pi. 
 The system can be enhanced to give better accuracy by taking more frames of video ( With increased computing resources). An array of gestures can be learned by the system with sufficient data. ( Ramped up data collection process). </p>
 
-<p><img src="http://i.imgur.com/z3YEiK3.png?1" alt="Prototype"></p>
+<p><img src="http://i.imgur.com/z3YEiK3.png?1" alt="Prototype" align="center"></p>
 
 <hr>
 
