--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>A single portable unit that runs on the Raspberry Pi. 
 The system can be enhanced to give better accuracy by taking more frames of video ( With increased computing resources). An array of gestures can be learned by the system with sufficient data. ( Ramped up data collection process). </p>
 
-<p><img src="http://i.imgur.com/z3YEiK3.png?1" alt="Prototype" align="middle"></p>
+<p><center><img src="http://i.imgur.com/z3YEiK3.png?1" alt="Prototype"></center></p>
 
 <hr>
 
@@ -66,13 +66,13 @@ The system can be enhanced to give better accuracy by taking more frames of vide
 <a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>The Development Team</strong>
 </h2>
 
-<p><a href="https://github.com/surajpaib" class="user-mention">@surajpaib</a></p>
+<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention">@surajpaib</a></p>
 
-<p><a href="https://github.com/nayan-mehta" class="user-mention">@nayan-mehta</a></p>
+<p>Nayan Mehta, <a href="https://github.com/nayan-mehta" class="user-mention">@nayan-mehta</a></p>
 
-<p><a href="https://github.com/deepthitv" class="user-mention">@deepthitv</a></p>
+<p>Deepthi Varambally, <a href="https://github.com/deepthitv" class="user-mention">@deepthitv</a></p>
 
-<p><a href="https://github.com/KohliP" class="user-mention">@KohliP</a></p>
+<p>Pritika Kohli, <a href="https://github.com/KohliP" class="user-mention">@KohliP</a></p>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/surajpaib/8th-Sem">Signify</a> is maintained by <a href="https://github.com/surajpaib">surajpaib</a>.</span>
