--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 <p>A single portable unit that runs on the Raspberry Pi. 
 The system can be enhanced to give better accuracy by taking more frames of video ( With increased computing resources). An array of gestures can be learned by the system with sufficient data. ( Ramped up data collection process). </p>
 
-<p><center><img src="http://i.imgur.com/z3YEiK3.png?1" alt="Prototype"></center></p>
+<p><center><img src="http://i.imgur.com/fSEzz9F.png?1" alt="Prototype"></center></p>
 
 <hr>
 
