--- a/index.html
+++ b/index.html
@@ -64,7 +64,8 @@ The system can be enhanced to give better accuracy by taking more frames of vide
 <br>
 
 <hr>
-
+</section>
+ <section class="page-header">
 <h2>
 <a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>The Development Team</strong>
 </h2>
