--- a/index.html
+++ b/index.html
@@ -9,10 +9,11 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body>
+  <body link="black">
     <section class="page-header">
       <h1 class="project-name">Signify</h1>
       <h2 class="project-tagline">Sign Language Recognition using Neural Networks</h2>
+      <b>
        <a href="https://github.com/surajpaib/8th-Sem/wiki" class="btn">HOME /Wiki on GitHub</a>
        <a href="https://github.com/surajpaib/8th-Sem/wiki/Demo" class="btn">Demo</a>
        <a href="https://github.com/surajpaib/8th-Sem/wiki/Requisites" class="btn">Requisites</a>
@@ -21,7 +22,7 @@
       <br><br>
       <a href="https://github.com/surajpaib/8th-Sem" class="btn">View on Github</a>
       
-      <a href="https://drive.google.com/file/d/0BxcO5v3Bi80QeHFKdXE5cWY3ZUk/view?usp=sharing" class="btn">Download White Paper</a>
+      <a href="https://drive.google.com/file/d/0BxcO5v3Bi80QeHFKdXE5cWY3ZUk/view?usp=sharing" class="btn">Download White Paper</a></b>
     </section>
 
     <section class="main-content">
