--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-light.css" media="screen">
   </head>
-  <body link="#000000">
+  <body>
     <section class="page-header">
       <h1 class="project-name">Signify</h1>
       <h2 class="project-tagline">Sign Language Recognition using Neural Networks</h2>
@@ -71,7 +71,7 @@ The system can be enhanced to give better accuracy by taking more frames of vide
 <a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>The Development Team</strong>
 </h2>
 
-<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention">@surajpaib</a></p>
+<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention" style="color: #000FFF">@surajpaib</a></p>
 
 <p>Nayan Mehta, <a href="https://github.com/nayan-mehta" class="user-mention">@nayan-mehta</a></p>
 
