--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@ The system can be enhanced to give better accuracy by taking more frames of vide
 <a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>The Development Team</strong>
 </h2>
 
-<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention" style="color: #ffffff">@surajpaib</a></p>
+<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention" style="color: #000000">@surajpaib</a></p>
 
 <p>Nayan Mehta, <a href="https://github.com/nayan-mehta" class="user-mention">@nayan-mehta</a></p>
 
