--- a/index.html
+++ b/index.html
@@ -71,16 +71,16 @@ The system can be enhanced to give better accuracy by taking more frames of vide
 <a id="the-development-team" class="anchor" href="#the-development-team" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a><strong>The Development Team</strong>
 </h2>
 
-<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention" style="color: #000000">@surajpaib</a></p>
+<p>Suraj Pai, <a href="https://github.com/surajpaib" class="user-mention" style="color: #ffffff">@surajpaib</a></p>
 
-<p>Nayan Mehta, <a href="https://github.com/nayan-mehta" class="user-mention" style="color: #000000">@nayan-mehta</a></p>
+<p>Nayan Mehta, <a href="https://github.com/nayan-mehta" class="user-mention" style="color: #ffffff">@nayan-mehta</a></p>
 
-<p>Deepthi Varambally, <a href="https://github.com/deepthitv" class="user-mention" style="color: #000000">@deepthitv</a></p>
+<p>Deepthi Varambally, <a href="https://github.com/deepthitv" class="user-mention" style="color: #ffffff">@deepthitv</a></p>
 
-<p>Pritika Kohli, <a href="https://github.com/KohliP" class="user-mention" style="color: #000000">@KohliP</a></p>
+<p>Pritika Kohli, <a href="https://github.com/KohliP" class="user-mention" style="color: #ffffff">@KohliP</a></p>
 
       <footer class="site-footer">
-        <span class="site-footer-owner"><a href="https://github.com/surajpaib/8th-Sem" style="color: #000000">Signify</a> is maintained by <a href="https://github.com/surajpaib" style="color: #000000">surajpaib</a>.</span>
+        <span class="site-footer-owner"><a href="https://github.com/surajpaib/8th-Sem" style="color: #ffffff">Signify</a> is maintained by <a href="https://github.com/surajpaib" style="color: #ffffff">surajpaib</a>.</span>
 
         
       </footer>
